[gd_scene load_steps=3 format=3 uid="uid://c5teqd0w4tca1"]

[ext_resource type="Script" uid="uid://o0euwhh5gq4t" path="res://scripts/ui/proto_win_screen.gd" id="1_iywrl"]

[sub_resource type="LabelSettings" id="LabelSettings_bhkeh"]
font_size = 48

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iywrl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2986111
anchor_top = 0.24691358
anchor_right = 0.7013889
anchor_bottom = 0.75308645
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="YouWinLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "YOU WIN"
label_settings = SubResource("LabelSettings_bhkeh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Continue"

[node name="MenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"
